--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -3,6 +3,8 @@
 <% end %>
 
 <h1>Your Pragmatic Catalog</h1>
+    <p><%= @intermediate_counter %></p>
+    <p><%= @ultimate_counter %></p>
 
 <% cache ['store', Product.latest] do %>
     <% @products.each do |product| %>
