--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,6 +1,10 @@
+<% if line_item == @current_item %>
+<tr id="current_item">
+<% else %>
 <tr>
+<% end %>
   <td><%= line_item.quantity %>&times;</td>
   <td><%= line_item.product.title %></td>
   <td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
-  <td><%= link_to 'Remove', line_item, method: :delete, data: { confirm: "Remove this item from your cart.\n             Are you sure?" } %></td>
+  <td><%= link_to 'Remove', line_item, remote: true, method: :delete, data: { confirm: "Remove this item from your cart.\n             Are you sure?" } %></td>
 </tr>
