--- a/app/views/line_items/destroy.js.erb
+++ b/app/views/line_items/destroy.js.erb
@@ -1,4 +1,4 @@
 $('#cart').html("<%= escape_javascript render(@cart) %>");
 
-$('#current_item').css({'background-color':'#88ff88'}).
+$('#current_item').css({'background-color':'#FFFF00'}).
   animate({'background-color':'#114411'}, 1000);
