27_Add l-i with click on image

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 <% end %>
 
-<h1>Your Pragmatic Catalog</h1>
+<h1>Your catalog</h1>
     <p><%= @intermediate_counter %></p>
     <p><%= @ultimate_counter %></p>
 
