35_Payment_types work fine. Tests not updated

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -25,8 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :pay_type %><br>
-    <%= collection_select(:order, :pay_type_id, PayType.all, :id, :name,
-      prompt: 'Choose a payment type') %>
+    <%= collection_select(:order, :pay_type_id, PayType.all, :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit 'Place Order' %>
