--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Hello!</h1>
-It is <%= Time.now %> now.
+It is <%= Time.zone.now	 %> now.</br></br>
 We have <%= pluralize(@total_orders, "order") %>.
