--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -6,5 +6,5 @@ if ($('#cart tr').length == 1) {
 
 $('#cart').html("<%= escape_javascript render(@cart) %>");
 
-$('#current_item').css({'background-color':'#88ff88'}).
-  animate({'background-color':'#114411'}, 1000);
+$('#current_item').css({'color':'orange'}).
+  animate({'color':'#337AB7'}, 1500);
