--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,6 +62,10 @@
       font-size: small;
     }
 
+    #logout_button {
+      color: #44a;
+    }
+
     #cart {
       font-size: smaller;
       color: #44a;
