--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -33,6 +33,14 @@
       color: #227;
     }
 
+    h4 {
+      font-size: 100%;
+      margin-left: 100px;
+      margin-top: 0;
+      margin-bottom: 2px;
+      color: black;
+    }
+
     p, div.price_line {
       margin-left: 100px;
       margin-top: 0.5em; 
