--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,14 +28,18 @@
 
       <% if session[:user_id] %>
         <ul>
-          <li> <%= link_to 'ORDERS', orders_path, type: "button", class: "btn btn-link" %>
-            <span class="badge"> <%= @total_orders %> </span>
+          <li> <%= link_to 'ORDERS', orders_path, type: 'button', class: 'btn btn-link' %>
+            <span class='badge'> <%= get_total_orders %> </span>
           </li>
-          <li> <%= link_to 'PRODUCTS', products_path, type: "button",
-            class: "btn btn-link" %> </li>
-          <li> <%= link_to 'USERS', users_path, type: "button", class: "btn btn-link" %> </li>
+          <li> <%= link_to 'PRODUCTS', products_path, type: 'button',
+            class: 'btn btn-link' %>
+          </li>
+          <li> <%= link_to 'USERS', users_path, type: 'button', class: 'btn btn-link' %>
+          </li>
+          <li> <%= link_to 'Logout', logout_path, method: :delete,
+            id: 'logout_button', type: 'button', class: 'btn btn-link' %>
+          </li>
         </ul>
-        <%= button_to 'Logout', logout_path, method: :delete, class: "btn btn-info" %>
       <% end %>
 
       </div>
