--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Author:</strong>
+  <%= @product.author %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @product.description %>
 </p>
