--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,6 +10,7 @@
         <div class="entry">
             <%= image_tag(product.image_url) %>
             <h3><%= product.title %></h3>
+            <h4>by <%= product.author %></h4>
             <%= sanitize(product.description) %>
             <div class="price_line">
             <span class="price"><%= number_to_currency(product.price) %></span>
