--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
 <h2>Your Cart</h2>
-<table>
+<table class="table table-condensed">
   <%= render(cart.line_items) %>
 
   <tr class="total_line">
@@ -9,6 +9,6 @@
 
 </table>
 
-<%= button_to "Checkout", new_order_path, method: :get %>
-<%= button_to "Empty cart", cart, method: :delete, remote: true,
+<%= button_to "Checkout", new_order_path, method: :get, class: "btn btn-default" %>
+<%= button_to "Empty this cart", cart, method: :delete, remote: true, class: "btn btn-link",
   data: { confirm: 'Are you sure?' } %>
