--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Hello!</h1>
-It is <%= Time.zone.now	 %> now.</br></br>
+</br>
+It is <%= Time.zone.now	 %> now.
+</br></br>
 We have <%= pluralize(get_total_orders, "order") %>.
 </br></br>
