--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -31,7 +31,6 @@
     <%= f.label :price %><br>
     <%= f.text_field :price %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  </br>
+  <button class="btn btn-success" type="submit">Add this product</button>
 <% end %>
