--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,8 +1,9 @@
 <div class="depot_form">
   <fieldset>
-    <legend>Please Enter Your Details</legend>
+    <legend>Please enter your details</legend>
     <%= render 'form' %>
   </fieldset>
 </div>
 
-<%= link_to 'Back', orders_path %>
+</br>
+<%= link_to 'Back', store_path %>
