--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,21 +3,26 @@
 <table class="table table-striped">
 <% @products.each do |product| %>
   <tr>
-    <td>
+    <td id="td_image_tag">
       <%= image_tag(product.image_url, class: 'list_image') %>
     </td>
 
     <td class="list_description">
       <dl>
         <dt><%= product.title %></dt>
+        <dd>(author: <%= product.author %>)</dd>
         <dd><%= truncate(strip_tags(product.description), length: 80) %></dd>
       </dl>
     </td>
 
     <td class="list_actions">
       <%= link_to 'Show', product %><br />
+    </td>
+    <td class="list_actions">
       <%= link_to 'Edit', edit_product_path(product) %><br />
-      <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </td>
+    <td class="list_actions">
+      <%= link_to 'Remove', product, method: :delete, data: { confirm: 'Are you sure?' } %>
     </td>
   </tr>
 <% end %>
